fxprof-processed-profile/tests/integration_tests/snapshots/integration_tests__profile_with_js.snap
---
source: fxprof-processed-profile/tests/integration_tests/main.rs
expression: profile_as_json_value(&profile)
---
{
  "counters": [],
  "libs": [],
  "meta": {
    "categories": [
      {
        "color": "grey",
        "name": "Other",
        "subcategories": [
          "Other"
        ]
      },
      {
        "color": "orange",
        "name": "Cycle Collection",
        "subcategories": [
          "Other",
          "Graph Reduction"
        ]
      }
    ],
    "debug": false,
    "extensions": {
      "baseURL": [],
      "id": [],
      "length": 0,
      "name": []
    },
    "interval": 1,
    "markerSchema": [],
    "pausedRanges": [],
    "preprocessedProfileVersion": 73,
    "processType": 0,
    "product": "test with js",
    "sampleUnits": {
      "eventDelay": "ms",
      "threadCPUDelta": "µs",
      "time": "ms"
    },
    "sourceCodeIsNotOnSearchfox": true,
    "startTime": 1636162232627,
    "symbolicated": false,
    "usesOnlyOneStackType": false,
    "version": 24
  },
  "pages": [],
  "profilerOverhead": [],
  "shared": {
    "frameTable": {
      "address": [
        0,
        0
      ],
      "category": [
        1,
        1
      ],
      "column": [
        0,
        0
      ],
      "flags": [
        4,
        4
      ],
      "func": [
        0,
        1
      ],
      "innerWindowID": [
        0,
        0
      ],
      "length": 2,
      "lib": [
        0,
        0
      ],
      "line": [
        0,
        0
      ],
      "nativeSymbol": [
        0,
        0
      ],
      "originalLocation": [
        0,
        0
      ],
      "subcategory": [
        0,
        1
      ]
    },
    "funcTable": {
      "columnNumber": [
        null,
        null
      ],
      "isJS": [
        true,
        false
      ],
      "length": 2,
      "lineNumber": [
        null,
        null
      ],
      "name": [
        0,
        1
      ],
      "originalLocation": [
        null,
        null
      ],
      "relevantForJS": [
        false,
        false
      ],
      "resource": [
        -1,
        -1
      ],
      "source": [
        null,
        null
      ]
    },
    "nativeSymbols": {
      "address": [],
      "functionSize": [],
      "length": 0,
      "libIndex": [],
      "name": []
    },
    "resourceTable": {
      "host": [],
      "length": 0,
      "name": [],
      "type": []
    },
    "sourceLocationTable": {
      "column": [],
      "length": 0,
      "line": [],
      "source": []
    },
    "sources": {
      "content": [],
      "filename": [],
      "id": [],
      "length": 0,
      "sourceMapURL": [],
      "startColumn": [],
      "startLine": []
    },
    "stackTable": {
      "frame": [
        0,
        1
      ],
      "length": 2,
      "prefixOffset": [
        0,
        1
      ]
    },
    "stringArray": [
      "Some label string",
      "0x7f76b7ffc0e6"
    ]
  },
  "threads": [
    {
      "isMainThread": true,
      "markers": {
        "category": [],
        "data": [],
        "endTime": [],
        "length": 0,
        "name": [],
        "phase": [],
        "startTime": []
      },
      "name": "test2",
      "pausedRanges": [],
      "pid": "123",
      "processName": "test2",
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "samples": {
        "length": 1,
        "stack": [
          1
        ],
        "threadCPUDelta": [
          0
        ],
        "timeDeltas": [
          1
        ],
        "weight": [
          1
        ],
        "weightType": "samples"
      },
      "showMarkersInTimeline": false,
      "tid": "12346",
      "unregisterTime": null
    }
  ]
}
