fxprof-processed-profile/tests/integration_tests/snapshots/integration_tests__profile_without_js.snap
---
source: fxprof-processed-profile/tests/integration_tests/main.rs
expression: profile_as_json_value(&profile)
---
{
  "counters": [
    {
      "category": "Memory",
      "description": "Amount of allocated memory",
      "display": {
        "color": "red",
        "graphType": "line-accumulated",
        "label": "Memory",
        "markerSchemaLocation": "timeline-memory",
        "sortWeight": 20,
        "tooltipRows": [
          {
            "format": {
              "unit": "bytes"
            },
            "label": "relative memory at this time",
            "labelKey": "memory-relative",
            "source": "accumulated",
            "type": "value"
          },
          {
            "format": {
              "unit": "bytes"
            },
            "label": "memory range in graph",
            "labelKey": "memory-range",
            "source": "count-range",
            "type": "value"
          },
          {
            "format": {
              "unit": "number"
            },
            "label": "allocations and deallocations since the previous sample",
            "labelKey": "memory-operations",
            "source": "sample-number",
            "type": "value"
          }
        ],
        "unit": "bytes"
      },
      "mainThreadIndex": 0,
      "name": "malloc",
      "pid": "123",
      "samples": {
        "count": [
          0,
          1000,
          800
        ],
        "length": 3,
        "number": [
          0,
          2,
          1
        ],
        "timeDeltas": [
          0,
          1,
          1
        ]
      }
    }
  ],
  "libs": [
    {
      "arch": null,
      "breakpadId": "5C0A0D51EA1980DF43F203B4525BE9BE0",
      "codeId": "510d0a5c19eadf8043f203b4525be9be3dcb9554",
      "debugName": "dump_syms",
      "debugPath": "/home/mstange/code/dump_syms/target/release/dump_syms",
      "name": "dump_syms",
      "path": "/home/mstange/code/dump_syms/target/release/dump_syms"
    },
    {
      "arch": null,
      "breakpadId": "1629FCF0BE5C8860C0E1ADF03B0048FB0",
      "codeId": "f0fc29165cbe6088c0e1adf03b0048fbecbc003a",
      "debugName": "libc.so.6",
      "debugPath": "/usr/lib/x86_64-linux-gnu/libc.so.6",
      "name": "libc.so.6",
      "path": "/usr/lib/x86_64-linux-gnu/libc.so.6"
    }
  ],
  "meta": {
    "categories": [
      {
        "color": "grey",
        "name": "Other",
        "subcategories": [
          "Other"
        ]
      },
      {
        "color": "blue",
        "name": "Regular",
        "subcategories": [
          "Other"
        ]
      }
    ],
    "debug": false,
    "extensions": {
      "baseURL": [],
      "id": [],
      "length": 0,
      "name": []
    },
    "interval": 1,
    "markerSchema": [
      {
        "chartLabel": "{marker.data.name}",
        "display": [
          "marker-chart",
          "marker-table"
        ],
        "fields": [
          {
            "containsPII": [
              "url",
              "extension-id"
            ],
            "format": "unique-string",
            "key": "name",
            "label": "Details"
          }
        ],
        "name": "Text",
        "tableLabel": "{marker.name} - {marker.data.name}"
      },
      {
        "description": "This is a test marker with a custom schema.",
        "display": [
          "marker-chart",
          "marker-table"
        ],
        "fields": [
          {
            "format": "unique-string",
            "key": "eventName",
            "label": "Event name"
          },
          {
            "format": "bytes",
            "key": "allocationSize",
            "label": "Allocation size"
          },
          {
            "format": "url",
            "key": "url",
            "label": "URL"
          },
          {
            "format": "duration",
            "key": "latency",
            "label": "Latency"
          }
        ],
        "graphs": [
          {
            "color": "green",
            "key": "latency",
            "type": "line"
          }
        ],
        "name": "custom",
        "tooltipLabel": "Custom tooltip label"
      }
    ],
    "oscpu": "macOS 14.4",
    "pausedRanges": [],
    "preprocessedProfileVersion": 72,
    "processType": 0,
    "product": "test",
    "sampleUnits": {
      "eventDelay": "ms",
      "threadCPUDelta": "µs",
      "time": "ms"
    },
    "sourceCodeIsNotOnSearchfox": true,
    "startTime": 1636162232627,
    "symbolicated": false,
    "usesOnlyOneStackType": true,
    "version": 24
  },
  "pages": [],
  "profilerOverhead": [],
  "shared": {
    "frameTable": {
      "address": [
        0,
        796420,
        911223,
        1332248,
        2354017,
        2452862,
        1700071,
        172156,
        1075602,
        905942,
        979918,
        2437518,
        1405368,
        737506,
        2586868,
        674246
      ],
      "category": [
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1,
        1
      ],
      "column": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0
      ],
      "flags": [
        4,
        6,
        6,
        6,
        6,
        6,
        14,
        14,
        6,
        6,
        6,
        6,
        6,
        6,
        6,
        14
      ],
      "func": [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15
      ],
      "innerWindowID": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0
      ],
      "length": 16,
      "lib": [
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1
      ],
      "line": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0
      ],
      "nativeSymbol": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2
      ],
      "originalLocation": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0
      ],
      "subcategory": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0
      ]
    },
    "funcTable": {
      "columnNumber": [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null
      ],
      "isJS": [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false
      ],
      "length": 16,
      "lineNumber": [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null
      ],
      "name": [
        0,
        2,
        3,
        4,
        5,
        6,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17
      ],
      "originalLocation": [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null
      ],
      "relevantForJS": [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false
      ],
      "resource": [
        -1,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1
      ],
      "source": [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null
      ]
    },
    "nativeSymbols": {
      "address": [
        1700001,
        172156,
        674226
      ],
      "functionSize": [
        180,
        20,
        44
      ],
      "length": 3,
      "libIndex": [
        1,
        1,
        1
      ],
      "name": [
        8,
        9,
        17
      ]
    },
    "resourceTable": {
      "host": [
        null,
        null
      ],
      "length": 2,
      "name": [
        1,
        7
      ],
      "type": [
        1,
        1
      ]
    },
    "sourceLocationTable": {
      "column": [],
      "length": 0,
      "line": [],
      "source": []
    },
    "sources": {
      "content": [],
      "filename": [],
      "id": [],
      "length": 0,
      "sourceMapURL": [],
      "startColumn": [],
      "startLine": []
    },
    "stackTable": {
      "frame": [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15
      ],
      "length": 16,
      "prefixOffset": [
        0,
        1,
        1,
        1,
        1,
        1,
        1,
        6,
        1,
        1,
        1,
        1,
        5,
        1,
        1,
        1
      ]
    },
    "stringArray": [
      "0x7ffdb4824837",
      "dump_syms",
      "0xc2704",
      "0xde777",
      "0x145418",
      "0x23eb61",
      "0x256d7e",
      "libc.so.6",
      "libc_symbol_1",
      "libc_symbol_2",
      "0x106992",
      "0xdd2d6",
      "0xef3ce",
      "0x25318e",
      "0x1571b8",
      "0xb40e2",
      "0x2778f4",
      "libc_symbol_3",
      "Experimental",
      "Hello world!",
      "My event",
      "https://mozilla.org/",
      "CustomName"
    ]
  },
  "threads": [
    {
      "isMainThread": true,
      "markers": {
        "category": [
          0,
          0
        ],
        "data": [
          {
            "name": 19,
            "type": "Text"
          },
          {
            "allocationSize": 512000,
            "eventName": 20,
            "latency": 123,
            "type": "custom",
            "url": "https://mozilla.org/"
          }
        ],
        "endTime": [
          0,
          2
        ],
        "length": 2,
        "name": [
          18,
          22
        ],
        "phase": [
          0,
          1
        ],
        "startTime": [
          0,
          0
        ]
      },
      "name": "test",
      "pausedRanges": [],
      "pid": "123",
      "processName": "test",
      "processShutdownTime": null,
      "processStartupTime": 0,
      "processType": "default",
      "registerTime": 0,
      "samples": {
        "length": 4,
        "stack": [
          null,
          6,
          11,
          15
        ],
        "threadCPUDelta": [
          0,
          0,
          0,
          0
        ],
        "timeDeltas": [
          0,
          1,
          1,
          1
        ],
        "weight": [
          1,
          1,
          1,
          1
        ],
        "weightType": "samples"
      },
      "showMarkersInTimeline": false,
      "tid": "12345",
      "unregisterTime": null
    }
  ]
}
